2008-11-05  kitone  <kitone@gna.org>

	* src/utility.h:
	Add function get_widget_derived(path, file, name)

2008-11-05  kitone  <kitone@gna.org>

	* share/glade/dialog-style-editor.glade:
	Fix: bug #12569
	Allow Opacity selection for Secondary, Outline and Shadow for ASS.

2008-11-05  kitone  <kitone@gna.org>

	* src/formats/AdvancedSubStationAlpha.h:
	Fix: bug #12566
	Alpha channel support for ASS. (patch by Khalahan)

2008-11-05  kitone  <kitone@gna.org>

	* plugins/actions/preferences/ExtensionPage.h:
	* plugins/actions/preferences/Makefile.am:
	* plugins/actions/preferences/PreferencesPlugin.cc:
	* share/glade/dialog-preferences.glade:
	Add Extension Manager in the preferences.

2008-11-05  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/gui/TreeViewExtensionManager.cc:
	* src/gui/TreeViewExtensionManager.h:
	New files.

2008-11-05  kitone  <kitone@gna.org>

	* src/ExtensionInfo.cc:
	* src/ExtensionInfo.h:
	Add get_authors function.

2008-11-04  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/actions/spellchecking/Makefile.am:
	* plugins/actions/wavefrommanagement/Makefile.am:
	* src/Makefile.am:
	* src/we/WaveformRenderer.cc:
	* src/we/WaveformRenderer.h:
	Clean dependence in the Makefile.

2008-11-04  kitone  <kitone@gna.org>

	* autogen.sh:
	Add AC_PROG_LIBTOOL check.

	* configure.in:
	Add missing file plugins/Makefile.

2008-11-03  kitone  <kitone@gna.org>

	* configure.in:
	Fix: removed PACKAGE_SHARE_DIR.

	* share/menubar.xml:
	Update with new system.

	* src/gui/MenuBar.cc:
	Add extension menu (Exts).

	* plugins/actions/about/About.cc:
	* plugins/actions/adjusttime/AdjustTime.cc:
	* plugins/actions/applytranslation/ApplyTranslation.cc:
	* plugins/actions/changeframerate/ChangeFramerate.cc:
	* plugins/actions/combinesubtitles/CombineSubtitles.cc:
	* plugins/actions/command/Command.cc:
	* plugins/actions/configurekeyboardshortcuts/ConfigureKeyboardShortcuts.cc:
	* plugins/actions/dialoguize/Dialoguize.cc: